<resources>
    <string name="app_name">Quester</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Пароль</string>
    <string name="login_button_text">Войти</string>
    <string name="my_places">Мои места</string>
    <string name="toolbar_auth">Авторизация</string>
    <string name="toolbar_add_quest">Добавление квеста</string>
    <string name="profile">Профиль</string>
    <string name="favourites">Избранное</string>
    <string name="map">Карта</string>
    <string name="signup_button_text">Зарегистрироваться</string>
    <string name="firstname_hint">Введите имя</string>
    <string name="lastname_hint">Введите фамилию</string>
    <string name="error_message">Неизвестная ошибка</string>
    <string name="error_network_message">Сетевая ошибка</string>
    <string name="error_wrong_email_password">Введены неправильные email/пароль</string>
    <string name="error_wrong_data">Введены некорректные данные</string>
    <string name="error_incorrect_email">Введен некорректный email</string>
    <string name="error_empty_strings">Необходимо заполнить все поля</string>
    <string name="error_email_exists">Пользователь с таким email уже зарегистрирован</string>
    <string name="auth_text">Авторизация</string>
    <string name="auth_ok">Вы авторизованы</string>
    <string name="guest_name">Гость</string>
    <string name="logout_button_text">Выйти</string>
    <string name="quest_add_btn">Добавить квест</string>
    <string name="error_no_points_quests">Вы должны добавить точки в квест</string>
    <string name="error_no_authorized_quest">Вы должны авторизованы, чтобы добавлять квесты</string>
    <string name="quest_saved">Квест успешно сохранен</string>
    <string name="quest_title_hint">Название квеста</string>
    <string name="quest_description_hint">Описание квеста</string>
    <string name="button_quest_create_cancel">Отменить</string>
    <string name="button_quest_create_done">Готово</string>
    <string name="button_add_photo_camera">Сделать фото</string>
    <string name="button_add_photo_gallery">Выбрать из галереи</string>
</resources>
