<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="50dp"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <EditText
            android:id="@+id/quest_title_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/quest_title_hint" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <EditText
            android:id="@+id/quest_description_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="300"
            android:lines="5"
            android:gravity="top"
            android:hint="@string/quest_description_hint" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/button_quest_create_cancel"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/button_quest_create_cancel"
            style="@style/Base.TextAppearance.AppCompat.Widget.Button" />

        <Button
            android:id="@+id/button_quest_create_done"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/button_quest_create_done"
            style="@style/Base.TextAppearance.AppCompat.Widget.Button" />
    </LinearLayout>

</LinearLayout>