<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="50dp"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/avatar_profile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:srcCompat="@drawable/ic_profile_default"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical">

            <Button
                android:id="@+id/button_add_avatar_camera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_add_photo_camera" />

            <Button
                android:id="@+id/button_add_avatar_gallery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_add_photo_gallery" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/button_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout_button_text"
        android:layout_marginTop="15dp"/>

</LinearLayout>